# cocoa_game

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
cmake/: content.cmake  shaders.cmake
content/: vertex.vert
shaders/: vertex.frag  vertex.vert
src/: common.h  macros.h  main.cpp
src/debug/: log.h
src/directX12/core/: encoder_impl.cpp  encoder_impl.h  render_device_impl.cpp  render_device_impl.h  swapchain.cpp  swapchain.h
src/directX12/utils/: common.h  d3d12_types.h
src/graphics/: descriptors.h  enums.h  flags.h  handles.h  helpers.h  types.h
src/graphics/core/: device.h  encoder.h  render_device.h  render_encoder.h  resource_manager.h  window.h
src/graphics/utils/: descriptors.h  enums.h  flags.h  handles.h  types.h
src/math/: common.h  matrix3x3.h  matrix4x4.h  quaternion.h  vector3.h
src/objects/: camera.h  transform.h
src/tools/: resource_manager.h  rich_presence.cpp  rich_presence.h  stb.cpp
src/vulkan/: common.h  device.cpp  device.h  encoder.cpp  encoder.h  handles.h  helpers.h  surface.h  swapchain.cpp  swapchain.h  vma.h
src/vulkan/core/: render_device_impl.cpp  render_device_impl.h  render_encoder_impl.cpp  render_encoder_impl.h
src/vulkan/internal/helpers/: descriptors.h  enums.h  flags.h  types.h
src/vulkan/resources/: bind_group.cpp  bind_group.h  bind_group_layout.cpp  bind_group_layout.h  buffer.cpp  buffer.h  pipeline.h  pipeline_layout.cpp  pipeline_layout.h  render_pipeline.cpp  render_pipeline.h  sampler.cpp  sampler.h  shader_module.cpp  shader_module.h  texture.cpp  texture.h  texture_view.cpp  texture_view.h
src/vulkan/utils/: common.cpp  common.h
src/vulkan_legacy/: device.h  encoder.cpp  surface.cpp  swapchain.h
src/vulkan_legacy/internal/helpers/: flags.h  types.h
src/vulkan_legacy/resources/: bind_group.h  bind_group_layout.cpp  bind_group_layout.h  buffer.cpp  pipeline_layout.cpp  pipeline_layout.h  sampler.cpp  shader_module.cpp  shader_module.h  texture_view.cpp
